// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeleteServerButton /> renders expected content 1`] = `
<span>
  <span
    class="button"
  >
    Foo bar
  </span>
</span>
`;

exports[`<DeleteServerButton /> renders expected content 2`] = `
<span>
  <span
    class="button"
  >
    baz
  </span>
</span>
`;

exports[`<DeleteServerButton /> renders expected content 3`] = `
<span>
  <span
    class="button"
  >
    something
  </span>
</span>
`;

exports[`<DeleteServerButton /> renders expected content 4`] = `
<span>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-circle-minus fa-fw "
    data-icon="circle-minus"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM184 232H328c13.3 0 24 10.7 24 24s-10.7 24-24 24H184c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
      fill="currentColor"
    />
  </svg>
  <span
    class="button"
  >
    Remove this server
  </span>
</span>
`;
